# OpenProtocol

./: .gitignore  CHANGES.md  OpenProtocol.sln  README.md
cs/: OpenProtocol.sln  README.md  messages_reference.md  quick_reference.md
cs/OpenProtocol/: OpenProtocol.csproj  README.md
cs/OpenProtocol/Data Classes/: Controller.cs  Enums.cs  Message.cs
cs/OpenProtocol/Data Classes/Message Types/: Alive.cs  ControllerAction.cs  ControllerStatus.cs  Controllers.cs  CycleData.cs  DataDictionary.cs  JobCards.cs  Join.cs  (+7 more)
cs/OpenProtocol/JSON/: DecimalConverter.cs  JsonSerializationContractResolver.cs  Message.cs  NullToEmptyStringConverter.cs  ObjectDictionaryJsonConverter.cs  Parser.cs  Serializer.cs  SimpleTypeNameSerializationBinder.cs
cs/OpenProtocol/Utils/: RLE.cs
cs/doc/: api_reference.md  messages_reference.md  quick_reference.md
cs/examples/OpenProtocolViewer/: HandleMessage.cs  OpenProtocolViewer.csproj  Program.cs  README.md
doc/: actions.md  alarms.md  cycledata.md  enums.md
js/examples/openprotocol-web-viewer/: README.md  app.js  index.html  openprotocol-web-viewer.njsproj
rs/: .gitignore  Cargo.toml  README.md  rustfmt.toml
rs/src/: address.rs  controller.rs  enums.rs  error.rs  filters.rs  geo_location.rs  job_card.rs  key_value_pair.rs  lib.rs  messages.rs  operator.rs  state_values.rs  text.rs  types.rs  utils.rs
rs/tests/: json.rs
ts/examples/openprotocol-web-viewer/: README.md  app.js  app.js.map  app.ts  index.html  openprotocol-web-viewer.njsproj  tsconfig.json
ts/lib/: iChen.OpenProtocol.d.ts  iChen.OpenProtocol.js  iChen.OpenProtocol.js.map  iChen.OpenProtocol.min.js
ts/src/: README.md  iChen.OpenProtocol.API.ts  iChen.OpenProtocol.Messages.ts  iChen.OpenProtocol.ts  openprotocol-typescript.njsproj  tsconfig.json
(+1 files in other folders)
