[package]
name = "ichen-openprotocol"
description = "iChen Open Protocol access library."
keywords = ["ChenHsong", "iChen", "OpenProtocol"]
categories = ["api-bindings"]
version = "0.2.0"
edition = "2018"
authors = ["Chen Hsong"]
homepage = "https://chenhsong.github.io/iChen/"
repository = "https://github.com/chenhsong/OpenProtocol"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
chrono = { version="0.4.*", features = ["serde"] }
regex = "1.2.*"
lazy_static = "1.3.*"
strum = "0.15.*"
strum_macros = "0.15.*"
websocket = "0.23.*"
