[package]
name = "ichen-openprotocol"
description = "iChen Open Protocol access library."
keywords = ["ChenHsong", "iChen", "OpenProtocol"]
categories = ["api-bindings"]
version = "0.4.1"
edition = "2018"
authors = ["Chen Hsong"]
homepage = "https://chenhsong.github.io/iChen/"
repository = "https://github.com/chenhsong/OpenProtocol/tree/master/rs"
readme = "README.md"
license = "MIT"

[dependencies]
derive_more = "0.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
chrono = { version="0.*", features = ["serde"] }
regex = "1.2.*"
lazy_static = "1.3.*"
bitflags = "1.1.*"
websocket = "0.*"
